--- a/static/pricing_style.css
+++ b/static/pricing_style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background: #f4f7fa;
@@ -178,7 +178,7 @@ body {
     padding: 15px 30px;
     font-size: 1.2rem;
     border: none;
-    border-radius: 8px;
+    border-radius: 14px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
@@ -196,20 +196,19 @@ body {
 
 
 /* Footer Styles */
-.footer {
-    background: #1a73e8; /* Footer background color */
-    color: white; /* Text color */
-    padding: 2px 0; /* Padding for spacing */
-    text-align: center; /* Center align the footer content */
-    font-size: 0.9rem; /* Font size */
-    border-top: 4px solid #1a73e8; /* Add a top border for separation */
- /* Fix the footer to the bottom */
-    bottom: 0; /* Fix it to the bottom */
-    left: 0; /* Ensure it stretches from the left edge */
-    width: 100%; /* Make the footer span the entire width of the screen */
-    z-index: 10; /* Ensure it's above other elements */
+/* .footer {
+    background: #1a73e8;
+    color: rgb(255, 255, 255); 
+    padding: 2px 0; 
+    text-align: center;
+    font-size: 0.9rem;
+    border-top: 4px solid #1661c4; 
+    bottom: 0; 
+    left: 0;
+    width: 100%;
+    z-index: 10;
     margin-top: 0;
-}
+} */
 
 
 /* Prevent shrinking when interacting with the pricing section */
