--- a/static/about_style.css
+++ b/static/about_style.css
@@ -1,4 +1,16 @@
 /* General Styles */
+@font-face {
+    font-family: 'Poppins';
+    src: url('fonts/Poppins-Regular.woff2') format('woff2'),
+        url('fonts/Poppins-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
