--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,5 @@
-/* Global Styles */
-@font-face {
-    font-family: 'Poppins';
-    src: url('fonts/Poppins-Regular.woff2') format('woff2'),
-        url('fonts/Poppins-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
 
 body {
-    font-family: 'Poppins', sans-serif;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background: #f8f9fa;
@@ -102,6 +89,10 @@ header p {
     border-radius: 25px;
     font-size: 1rem;
     transition: background 0.3s ease, color 0.3s ease;
+    height: 4vh;
+    text-align: center;
+    align-content: center;
+    font-weight: 501;
 }
 
 .button.primary {
